# generador_reportes

./: .gitattributes  .gitignore  .~lock.esquema.xlsx#  ACTA DE EXAMEN-1.docx  Analítico de Estudios.docx  GeneradorReportes.spec  README.md  acta_examen.py  analitico.py  config.py  data_loader.py  docx_helpers.py  generador_reportes.py  main.py  pyproject.toml  ui_app.py  ui_theme.py  ui_viewer.py
reportes/: __init__.py  __main__.py  config.py
reportes/core/: __init__.py  acta_examen.py  analitico.py  excel_loader.py  excel_writer.py
reportes/ui/: __init__.py  app.py  data_entry.py  viewer.py
